[package]
name = "Monte-Carlo-Pi"
version = "0.1.1"
edition = "2021"
description = "Estimer PI avec la méthode de Monte Carlo"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/FBDev64/MonteCarlo"
repository = "https://github.com/FBDev64/MonteCarlo.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
